--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.6
   json_annotation: ^4.9.0
-  flutter_secure_storage: ^9.2.3
   cloud_firestore: ^5.6.1
   firebase_core: ^3.10.0
   flex_color_picker: ^3.7.0
+  get_it: ^8.0.3
+  either_dart: ^1.0.0
+  localstorage: ^5.0.0
 
 dev_dependencies:
   flutter_test:
