--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   get_it: ^8.0.3
   either_dart: ^1.0.0
   localstorage: ^5.0.0
+  go_router: ^14.6.3
 
 dev_dependencies:
   flutter_test:
