--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
   json_serializable: ^6.9.2
+  build_runner: ^2.4.14
 
 flutter:
   uses-material-design: true
