--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   either_dart: ^1.0.0
   localstorage: ^5.0.0
   go_router: ^14.6.3
+  two_dimensional_scrollables: ^0.3.3
 
 dev_dependencies:
   flutter_test:
