--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,6 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^8.1.6
   json_annotation: ^4.9.0
-  cloud_firestore: ^5.6.1
-  firebase_core: ^3.10.0
   flex_color_picker: ^3.7.0
   get_it: ^8.0.3
   either_dart: ^1.0.0
@@ -24,6 +22,7 @@ dependencies:
   bloc: ^8.1.4
   meta: ^1.15.0
   flutter_iconpicker: ^4.0.1
+  supabase_flutter: ^2.8.3
 
 dev_dependencies:
   flutter_test:
