--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,15 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
+  fonts:
+    - family: Delius
+      fonts:
+        - asset: assets/fonts/Delius/Delius-Regular.ttf
+    - family: YuseiMagic
+      fonts:
+        - asset: assets/fonts/Yusei_Magic/YuseiMagic-Regular.ttf
 
-assets:
-    - assets/mock_data/
+  assets:
+      - assets/mock_data/
+      - assets/icons/
+
