--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   bloc: ^9.0.0
   meta: ^1.15.0
   supabase_flutter: ^2.8.3
+  intl: ^0.19.0
+  flutter_localization: ^0.3.1
+
 
 dev_dependencies:
   flutter_test:
