--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_bloc: ^9.0.0
   json_annotation: ^4.9.0
   flex_color_picker: ^3.7.0
@@ -22,8 +24,6 @@ dependencies:
   meta: ^1.15.0
   supabase_flutter: ^2.8.3
   intl: ^0.19.0
-  flutter_localization: ^0.3.1
-
 
 dev_dependencies:
   flutter_test:
