--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   meta: ^1.15.0
   supabase_flutter: ^2.8.3
   intl: ^0.19.0
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
